[package]
name = "musical_flash_cards"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.64"


[dependencies.web-sys]
version = "0.3.64"
features = ["Window", "Document", "Element", "HtmlElement","HtmlCollection", "SvgsvgElement", "HtmlDivElement", "MouseEvent", "CssStyleDeclaration", "HtmlInputElement", "HtmlSelectElement", "KeyboardEvent"]
